Сделал через before картинки в хеддере

--- a/index.html
+++ b/index.html
@@ -33,19 +33,22 @@
           <!-- <div class="page-contacts"> -->
 
             <ul class="email-and-phone">
-              <li>
+
+              <li class="email-and-phone--item icon-envelope">
               <a href="" target="_blank" class="email" title="Ссылка на нашу почту">
-                  <img class="nav-image"
-                    src="./images/envelope_(hover).svg"
-                    alt="Конверт" />Info@devstudio.com
+                  <!-- <img class="nav-image"
+                    src="./images/envelope.svg"
+                    alt="Конверт" /> -->
+                    Info@devstudio.com
               </a>
               </li>
 
-              <li>
+              <li class="email-and-phone--item icon-phone">
                 <a href="tel:+380961111111" class="phone">
-                <img class="nav-image"
-                  src="./images/vector.svg"
-                    alt="мобильный телефон" />+38 096 111 11 11
+                <!-- <img class="nav-image"
+                  src="./images/phone.svg"
+                    alt="мобильный телефон" /> -->
+                    +38 096 111 11 11
               </a>
               </li>
             </ul>
