--- a/index.html
+++ b/index.html
@@ -69,45 +69,55 @@
               <h2 class="section-title visually-hidden">Секция</h2>
               <!-- скрываем с помощью CSS -->
               <ul class="section-list">
-                <li class="section-item icon-antenna">
-                  <svg>
-                    <use href="../images/symbol-defs.svg#icon-antenna"></use>
-                  </svg>
-                  <h3 class="undersection">Внимание к деталям</h3>
-                  <p class="section-text">
-                    Идейные соображения, а также начало повседневной работы по
-                    формированию позиции.
-                  </p>
+                <li class="section-item">
+                 <div class="section-block">
+                   <svg class="icon-antenna">
+                     <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                   </svg>
+                    <h3 class="undersection">Внимание к деталям</h3>
+                    <p class="section-text">
+                      Идейные соображения, а также начало повседневной работы по
+                      формированию позиции.
+                    </p>
+                 </div>
                 </li>
+
                 <li class="section-item icon-clock">
-                  <!-- <a href="">
-                    <img src="./images/clock.png" alt="Часы" />
-                  </a> -->
-                  <h3 class="undersection">Пунктуальность</h3>
-                  <p class="section-text">
-                    Задача организации, в особенности же рамки и место обучения кадров
-                    влечет за собой.
-                  </p>
+                  <div class="section-block">
+                    <svg class="icon-antenna">
+                      <use href="../images/symbol-defs.svg#icon-clock"></use>
+                    </svg>
+                    <h3 class="undersection">Пунктуальность</h3>
+                      <p class="section-text">
+                        Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.
+                      </p>
+                  </div>
                 </li>
+
                 <li class="section-item icon-pc">
-                  <!-- <a href="">
-                    <img src="./images/pc.png" alt="ПК" />
-                  </a> -->
-                  <h3 class="undersection">Планирование</h3>
-                  <p class="section-text">
-                    Равным образом консультация с широким активом в значительной
-                    степени обуславливает.
-                  </p>
+                  <div class="section-block">
+                    <svg class="icon-antenna">
+                      <use href="../images/symbol-defs.svg#icon-pc"></use>
+                    </svg>
+                    <h3 class="undersection">Планирование</h3>
+                    <p class="section-text">
+                      Равным образом консультация с широким активом в значительной
+                      степени обуславливает.
+                    </p>
+                  </div>
                 </li>
                 <li class="section-item icon-astronaut">
-                  <!-- <a href="">
-                    <img src="./images/astronaut.png" alt="Космонавт" />
-                  </a> -->
-                  <h3 class="undersection">Современные технологии</h3>
-                  <p class="section-text">
-                    Значимость этих проблем настолько очевидна, что реализация
-                    плановых заданий.
-                  </p>
+                  <div class="section-block">
+                    <svg class="icon-antenna">
+                      <use href="../images/symbol-defs.svg#icon-astronaut"></use>
+                    </svg>
+                    <h3 class="undersection">Современные технологии</h3>
+                    <p class="section-text">
+                      Значимость этих проблем настолько очевидна, что реализация
+                      плановых заданий.
+                    </p>
+                  </div>
                 </li>
               </ul>
 
@@ -258,6 +268,7 @@
       <section class="clients-section">
         <div class="container">
           <h2 class="clients">Постоянные клиенты</h2>
+
           <ul class="clients-list">
             <li class="clients-card">
               <a href="" class="icon-ya_co">
@@ -339,7 +350,7 @@
 
 
 
-          <div container-subscribe>
+          <div class="container-subscribe">
             <b class="subscribe">подпишитесь на рассылку</b>
 
             <div class="auth-nav">
