начал делать иконки соц-сетей. Доделать

--- a/index.html
+++ b/index.html
@@ -167,31 +167,39 @@
                 <h3 class="team-member">John Smith</h3>
                 <p class="team-text">Product Designer</p>
                   <ul class="social-networks team-networks">
-                    <!-- в 1 карточке соц сети сделаные через бефоре (псевдоэлемент) -->
 
                     <li class="sn-element">
-                      <a href="" class="icon-instagram">
-                        <!-- <img src="./images/instagram.png" width="20" alt="Instagram" /> -->
+                      <a href="" class="link-instagram">
+                        <svg class="icon-instagram">
+                          <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
                       </a>
                     </li>
 
                     <li class="sn-element">
-                      <a href="" class="icon-twitter">
-                        <!-- <img src="./images/twitter.png" width="20" alt="Twitter" /> -->
-                    </a>
-                    </li>
-
-                    <li class="sn-element">
-                      <a href="" class="icon-facebook">
-                        <!-- <img src="./images/facebook.png" width="10" alt="Facebook" /> -->
+                      <a href="" class="link-twitter">
+                        <svg class="icon-twitter">
+                          <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
                       </a>
                     </li>
 
                     <li class="sn-element">
-                      <a href="" class="icon-linkedin">
-                        <!-- <img src="./images/linkedin.png" width="20" alt="linkedin" /> -->
+                      <a href="" class="link-facebook">
+                        <svg class="icon-facebook">
+                          <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
                       </a>
                     </li>
+
+                    <li class="sn-element">
+                      <a href="" class="link-linkedin">
+                        <svg class="icon-linkedin">
+                          <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                   </li>
+
                   </ul>
                 </div>
             </li>
@@ -270,47 +278,52 @@
           <h2 class="clients">Постоянные клиенты</h2>
 
           <ul class="clients-list">
+
             <li class="clients-card">
-              <a href="" class="icon-ya_co">
-                <!-- <img src="./images/ya&co.png" width="175" alt="Ya&Co logo" /> -->
+              <a href="" class="link-yaco">
+                <svg class="icon-yaco">
+                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                </svg>
               </a>
             </li>
-            <li class="clients-card">
-              <a href="" class="icon-companytaglinehere">
-                <!-- <img
-                  src="./images/companytaglinehere.png"
-                  width="175"
-                  alt="CompanyTagline logo"
-                /> -->
-            </a>
-            </li>
-            <li class="clients-card icon-company">
-              <a href="" class="icon-company">
-                <!-- <img src="./images/company.png" width="175" alt="Company logo"
-                /> -->
+
+            <li >
+              <a href="" class="link-companytaglinehere">
+                <div class="clients-card-test">
+                  <svg class="icon-companytaglinehere">
+                    <use href="../images/symbol-defs.svg#icon-companytaglinehere"></use>
+                  </svg>
+                </div>
               </a>
             </li>
+
+            <li>
+              <a href="" class="clients-card-test1">
+                <svg class="icon-company">
+                  <use href="../images/symbol-defs.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+
             <li class="clients-card">
               <a href="" class="icon-foster_peters">
-                <!-- <img
-                  src="./images/foster_peters.png"
-                  width="175"
-                  alt="foster peters logo"
-                /> -->
+                <svg class="icon-foster_peters">
+                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                </svg>
             </a>
             </li>
             <li class="clients-card">
               <a href="" class="icon-brand">
-                <!-- <img src="./images/brand.png" width="175" alt="brand logo" /> -->
+                <svg class="icon-foster_peters">
+                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                </svg>
               </a>
             </li>
             <li class="clients-card">
               <a href="" class="icon-company_tag_line2">
-                <!-- <img
-                  src="./images/company_tag_line2.png"
-                  width="175"
-                  alt="company_tag_line 2 logo"
-                /> -->
+                <svg class="icon-company_tag_line2">
+                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                </svg>
               </a>
             </li>
 
