--- a/index.html
+++ b/index.html
@@ -166,10 +166,11 @@
                 <img src="./images/john_smith.jpg" alt="John Smith" width="270" />
                 <h3 class="team-member">John Smith</h3>
                 <p class="team-text">Product Designer</p>
-                  <ul class="social-networks team-networks">
+
+                <ul class="social-networks team-networks">
 
                     <li class="sn-element">
-                      <a href="" class="link-instagram">
+                      <a href="" class="link-socialnetworks">
                         <svg class="icon-instagram">
                           <use href="../images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
@@ -177,7 +178,7 @@
                     </li>
 
                     <li class="sn-element">
-                      <a href="" class="link-twitter">
+                      <a href="" class="link-socialnetworks">
                         <svg class="icon-twitter">
                           <use href="../images/symbol-defs.svg#icon-twitter"></use>
                         </svg>
@@ -185,7 +186,7 @@
                     </li>
 
                     <li class="sn-element">
-                      <a href="" class="link-facebook">
+                      <a href="" class="link-socialnetworks">
                         <svg class="icon-facebook">
                           <use href="../images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
@@ -193,7 +194,7 @@
                     </li>
 
                     <li class="sn-element">
-                      <a href="" class="link-linkedin">
+                      <a href="" class="link-socialnetworks">
                         <svg class="icon-linkedin">
                           <use href="../images/symbol-defs.svg#icon-linkedin"></use>
                         </svg>
@@ -209,19 +210,40 @@
                 <img src="./images/marta_stewart.jpg" alt="Marta Stewart" width="270" />
                 <h3 class="team-member">Marta Stewart</h3>
                 <p class="team-text">Frontend Developer</p>
-                <ul class="marta-networks">
-                  <li class="marta-snitem">
-                    <!-- <img src="./images/instagram.png" width="20" alt="Instagram" /> -->
+                <ul class="social-networks team-networks">
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-instagram">
+                        <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="marta-snitem">
-                    <!-- <img src="./images/twitter.png" width="20" alt="Twitter" /> -->
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-twitter">
+                        <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="marta-snitem">
-                    <!-- <img src="./images/facebook.png" width="10" alt="Facebook" /> -->
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-facebook">
+                        <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="marta-snitem">
-                    <!-- <img src="./images/linkedin.png" width="20" alt="linkedin" /> -->
-                  </li>
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-linkedin">
+                        <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                 </li>
+
                 </ul>
               </div>
             </li>
@@ -231,20 +253,41 @@
                   <img src="./images/robert_jakis.jpg" alt="Robert Jakis" width="270" />
                   <h3 class="team-member">Robert Jakis</h3>
                   <p class="team-text">Marketing</p>
-                  <div class="social-networks team-networks">
-                    <a href=""
-                      ><img src="./images/instagram.png" width="20" alt="Instagram"
-                    /></a>
-                    <a href=""
-                      ><img src="./images/twitter.png" width="20" alt="Twitter"
-                    /></a>
-                    <a href=""
-                      ><img src="./images/facebook.png" width="10" alt="Facebook"
-                    /></a>
-                    <a href=""
-                      ><img src="./images/linkedin.png" width="20" alt="linkedin"
-                    /></a>
-                  </div>
+                  <ul class="social-networks team-networks">
+
+                    <li class="sn-element">
+                      <a href="" class="link-socialnetworks">
+                        <svg class="icon-instagram">
+                          <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="sn-element">
+                      <a href="" class="link-socialnetworks">
+                        <svg class="icon-twitter">
+                          <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="sn-element">
+                      <a href="" class="link-socialnetworks">
+                        <svg class="icon-facebook">
+                          <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="sn-element">
+                      <a href="" class="link-socialnetworks">
+                        <svg class="icon-linkedin">
+                          <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                   </li>
+
+                  </ul>
                 </div>
             </li>
 
@@ -253,20 +296,41 @@
                 <img src="./images/martin_doe.jpg" alt="Martin Doe" width="270" />
                 <h3 class="team-member">Martin Doe</h3>
                 <p class="team-text">UI Designer</p>
-                <div class="social-networks team-networks" >
-                  <a href=""
-                    ><img src="./images/instagram.png" width="20" alt="Instagram"
-                  /></a>
-                  <a href=""
-                    ><img src="./images/twitter.png" width="20" alt="Twitter"
-                  /></a>
-                  <a href=""
-                    ><img src="./images/facebook.png" width="10" alt="Facebook"
-                  /></a>
-                  <a href=""
-                    ><img src="./images/linkedin.png" width="20" alt="linkedin"
-                  /></a>
-                </div>
+                <ul class="social-networks team-networks">
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-instagram">
+                        <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-twitter">
+                        <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-facebook">
+                        <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="sn-element">
+                    <a href="" class="link-socialnetworks">
+                      <svg class="icon-linkedin">
+                        <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                 </li>
+
+                </ul>
               </div>
             </li>
           </ul>
@@ -279,8 +343,8 @@
 
           <ul class="clients-list">
 
-            <li class="clients-card">
-              <a href="" class="link-yaco">
+            <li class="">
+              <a href="" class="clients-link">
                 <svg class="icon-yaco">
                   <use href="../images/symbol-defs.svg#icon-yaco"></use>
                 </svg>
@@ -288,7 +352,7 @@
             </li>
 
             <li >
-              <a href="" class="link-companytaglinehere">
+              <a href="" class="clients-link">
                 <div class="clients-card-test">
                   <svg class="icon-companytaglinehere">
                     <use href="../images/symbol-defs.svg#icon-companytaglinehere"></use>
@@ -298,31 +362,31 @@
             </li>
 
             <li>
-              <a href="" class="clients-card-test1">
+              <a href="" class="clients-link">
                 <svg class="icon-company">
                   <use href="../images/symbol-defs.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-card">
-              <a href="" class="icon-foster_peters">
+            <li class="">
+              <a href="" class="clients-link">
                 <svg class="icon-foster_peters">
-                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                  <use href="../images/symbol-defs.svg#icon-foster_peters"></use>
                 </svg>
             </a>
             </li>
-            <li class="clients-card">
-              <a href="" class="icon-brand">
-                <svg class="icon-foster_peters">
-                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+            <li class="">
+              <a href="" class="clients-link">
+                <svg class="icon-brand">
+                  <use href="../images/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-card">
-              <a href="" class="icon-company_tag_line2">
+            <li class="">
+              <a href="" class="clients-link">
                 <svg class="icon-company_tag_line2">
-                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                  <use href="../images/symbol-defs.svg#icon-company_tag_line2"></use>
                 </svg>
               </a>
             </li>
@@ -341,7 +405,7 @@
               <div class="footer-adress">
                 <address class="footer-adress1">г. Киев, пр-т Леси Украинки, 26
                   <a href="info@example.com" class="footer-adress2">info@example.com</a>
-                  <a href="tel:+380991111111" class="footer-adress2">+380991111111</a>
+                  <a href="tel:+380991111111" class="footer-adress2">+38 099 111 11 11</a>
                 </address>
                 <!-- <address class="footer-adress2">info@example.com  +38 099 111 11 11</address> -->
               </div>
@@ -349,16 +413,41 @@
 
           <div class="join-container">
             <b class="join">присоединяйтесь</b>
-            <div class="social-networks">
-              <a href="" class="sn-element"><img src="./images/instagram.png" width="44" alt="instagram"
-              /></a>
-              <a href="" class="sn-element"><img src="./images/twitter.png" width="44" alt="Twitter"
-              /></a>
-              <a href="" class="sn-element"><img src="./images/facebook.png" width="22" alt="Facebook"
-              /></a>
-              <a href="" class="sn-element"><img src="./images/linkedin.png" width="44" alt="linkedin"
-              /></a>
-            </div>
+            <!-- <div class="social-networks"> -->
+              <ul class="social-networks">
+
+                <li class="sn-element footer-element">
+                  <a href="" class="link-socialnetworks footer--link--socialnetworks">
+                    <svg class="icon-instagram">
+                      <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="sn-element">
+                  <a href="" class="link-socialnetworks footer--link--socialnetworks">
+                    <svg class="icon-twitter">
+                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="sn-element">
+                  <a href="" class="link-socialnetworks footer--link--socialnetworks">
+                    <svg class="icon-facebook">
+                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="sn-element">
+                  <a href="" class="link-socialnetworks footer--link--socialnetworks">
+                    <svg class="icon-linkedin">
+                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+            <!-- </div> -->
           </div>
 
 
@@ -369,7 +458,11 @@
             <div class="auth-nav">
 
             <input class="input" type="text" name="E-mail" />
-            <a href="" class="button primary">Подписаться</a>
+            <a href="" class="button primary">Подписаться
+              <svg class="icon-send">
+                <use href="../images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </a>
             </div>
           </div>
 
