--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
             <div class="auth-nav">
 
             <input class="input" type="text" name="E-mail" />
-            <a href="" class="button primary">Подписаться</a>
+            <a href="" class="button primary" width="200px" hight="50px">Подписаться</a>
             </div>
           </div>
 
