--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="auth-nav">
 
             <input class="input" type="text" name="E-mail" />
-            <a href="" class="button primary">Подписаться
+            <a href="" class="button primary" width="200px" height="50px">Подписаться
               <svg class="icon-send">
                 <use href="../images/symbol-defs.svg#icon-send"></use>
               </svg>
