--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
               <li class="email-and-phone--item">
                 <a href="" target="_blank" class="email" title="Ссылка на нашу почту">
                   <svg class="icon-envelope">
-                    <use href="../images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
                   </svg>Info@devstudio.com</a>
               </li>
 
               <li class="email-and-phone--item">
                 <a href="tel:+380961111111" class="phone">
                   <svg class="icon-phone">
-                    <use href="../images/symbol-defs.svg#icon-phone"></use>
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>+38 096 111 11 11</a>
               </li>
             </ul>
