--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
               <li class="email-and-phone--item">
                 <a href="" target="_blank" class="email" title="Ссылка на нашу почту">
                   <svg class="icon-envelope">
-                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="../images/symbol-defs.svg#icon-envelope"></use>
                   </svg>Info@devstudio.com</a>
               </li>
 
               <li class="email-and-phone--item">
                 <a href="tel:+380961111111" class="phone">
                   <svg class="icon-phone">
-                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    <use href="../images/symbol-defs.svg#icon-phone"></use>
                   </svg>+38 096 111 11 11</a>
               </li>
             </ul>
@@ -72,7 +72,7 @@
                 <li class="section-item">
                  <div class="section-block">
                    <svg class="icon-antenna">
-                     <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                     <use href="/images/symbol-defs.svg#icon-antenna"></use>
                    </svg>
                     <h3 class="undersection">Внимание к деталям</h3>
                     <p class="section-text">
@@ -85,7 +85,7 @@
                 <li class="section-item icon-clock">
                   <div class="section-block">
                     <svg class="icon-antenna">
-                      <use href="../images/symbol-defs.svg#icon-clock"></use>
+                      <use href="./images/symbol-defs.svg#icon-clock"></use>
                     </svg>
                     <h3 class="undersection">Пунктуальность</h3>
                       <p class="section-text">
