--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li class="section-item">
                  <div class="section-block">
                    <svg class="icon-antenna">
-                     <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                     <use href="../images/symbol-defs.svg#icon-antenna"></use>
                    </svg>
                     <h3 class="undersection">Внимание к деталям</h3>
                     <p class="section-text">
@@ -85,7 +85,7 @@
                 <li class="section-item icon-clock">
                   <div class="section-block">
                     <svg class="icon-antenna">
-                      <use href="./images/symbol-defs.svg#icon-clock"></use>
+                      <use href="../images/symbol-defs.svg#icon-clock"></use>
                     </svg>
                     <h3 class="undersection">Пунктуальность</h3>
                       <p class="section-text">
