--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
               <li class="email-and-phone--item">
                 <a href="" target="_blank" class="email" title="Ссылка на нашу почту">
                   <svg class="icon-envelope">
-                    <use href="../images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
                   </svg>Info@devstudio.com</a>
               </li>
 
               <li class="email-and-phone--item">
                 <a href="tel:+380961111111" class="phone">
                   <svg class="icon-phone">
-                    <use href="../images/symbol-defs.svg#icon-phone"></use>
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>+38 096 111 11 11</a>
               </li>
             </ul>
@@ -72,7 +72,7 @@
                 <li class="section-item">
                  <div class="section-block">
                    <svg class="icon-antenna">
-                     <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                     <use href="./images/symbol-defs.svg#icon-antenna"></use>
                    </svg>
                     <h3 class="undersection">Внимание к деталям</h3>
                     <p class="section-text">
@@ -85,7 +85,7 @@
                 <li class="section-item icon-clock">
                   <div class="section-block">
                     <svg class="icon-antenna">
-                      <use href="../images/symbol-defs.svg#icon-clock"></use>
+                      <use href="./images/symbol-defs.svg#icon-clock"></use>
                     </svg>
                     <h3 class="undersection">Пунктуальность</h3>
                       <p class="section-text">
@@ -98,7 +98,7 @@
                 <li class="section-item icon-pc">
                   <div class="section-block">
                     <svg class="icon-antenna">
-                      <use href="../images/symbol-defs.svg#icon-pc"></use>
+                      <use href="./images/symbol-defs.svg#icon-pc"></use>
                     </svg>
                     <h3 class="undersection">Планирование</h3>
                     <p class="section-text">
@@ -110,7 +110,7 @@
                 <li class="section-item icon-astronaut">
                   <div class="section-block">
                     <svg class="icon-antenna">
-                      <use href="../images/symbol-defs.svg#icon-astronaut"></use>
+                      <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                     </svg>
                     <h3 class="undersection">Современные технологии</h3>
                     <p class="section-text">
@@ -172,7 +172,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-instagram">
-                          <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -180,7 +180,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-twitter">
-                          <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -188,7 +188,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-facebook">
-                          <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -196,7 +196,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-linkedin">
-                          <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                    </li>
@@ -215,7 +215,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-instagram">
-                        <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -223,7 +223,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-twitter">
-                        <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,7 +231,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-facebook">
-                        <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,7 +239,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-linkedin">
-                        <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                  </li>
@@ -258,7 +258,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-instagram">
-                          <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                          <use href="./images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -266,7 +266,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-twitter">
-                          <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                          <use href="./images/symbol-defs.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -274,7 +274,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-facebook">
-                          <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                          <use href="./images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -282,7 +282,7 @@
                     <li class="sn-element">
                       <a href="" class="link-socialnetworks">
                         <svg class="icon-linkedin">
-                          <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                    </li>
@@ -301,7 +301,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-instagram">
-                        <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -309,7 +309,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-twitter">
-                        <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -317,7 +317,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-facebook">
-                        <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -325,7 +325,7 @@
                   <li class="sn-element">
                     <a href="" class="link-socialnetworks">
                       <svg class="icon-linkedin">
-                        <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                  </li>
@@ -346,7 +346,7 @@
             <li class="">
               <a href="" class="clients-link">
                 <svg class="icon-yaco">
-                  <use href="../images/symbol-defs.svg#icon-yaco"></use>
+                  <use href="./images/symbol-defs.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
@@ -355,7 +355,7 @@
               <a href="" class="clients-link">
                 <div class="clients-card-test">
                   <svg class="icon-companytaglinehere">
-                    <use href="../images/symbol-defs.svg#icon-companytaglinehere"></use>
+                    <use href="./images/symbol-defs.svg#icon-companytaglinehere"></use>
                   </svg>
                 </div>
               </a>
@@ -364,7 +364,7 @@
             <li>
               <a href="" class="clients-link">
                 <svg class="icon-company">
-                  <use href="../images/symbol-defs.svg#icon-company"></use>
+                  <use href="./images/symbol-defs.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
@@ -372,21 +372,21 @@
             <li class="">
               <a href="" class="clients-link">
                 <svg class="icon-foster_peters">
-                  <use href="../images/symbol-defs.svg#icon-foster_peters"></use>
+                  <use href="./images/symbol-defs.svg#icon-foster_peters"></use>
                 </svg>
             </a>
             </li>
             <li class="">
               <a href="" class="clients-link">
                 <svg class="icon-brand">
-                  <use href="../images/symbol-defs.svg#icon-brand"></use>
+                  <use href="./images/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a href="" class="clients-link">
                 <svg class="icon-company_tag_line2">
-                  <use href="../images/symbol-defs.svg#icon-company_tag_line2"></use>
+                  <use href="./images/symbol-defs.svg#icon-company_tag_line2"></use>
                 </svg>
               </a>
             </li>
@@ -419,7 +419,7 @@
                 <li class="sn-element footer-element">
                   <a href="" class="link-socialnetworks footer--link--socialnetworks">
                     <svg class="icon-instagram">
-                      <use href="../images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -427,7 +427,7 @@
                 <li class="sn-element">
                   <a href="" class="link-socialnetworks footer--link--socialnetworks">
                     <svg class="icon-twitter">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -435,7 +435,7 @@
                 <li class="sn-element">
                   <a href="" class="link-socialnetworks footer--link--socialnetworks">
                     <svg class="icon-facebook">
-                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -443,7 +443,7 @@
                 <li class="sn-element">
                   <a href="" class="link-socialnetworks footer--link--socialnetworks">
                     <svg class="icon-linkedin">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -460,7 +460,7 @@
             <input class="input" type="text" name="E-mail" />
             <a href="" class="button primary" width="200px" height="50px">Подписаться
               <svg class="icon-send">
-                <use href="../images/symbol-defs.svg#icon-send"></use>
+                <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
             </a>
             </div>
