--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="page">
+
     <header class="page-header">
       <div class="page-container">
           <nav class="navigation">
@@ -139,16 +140,20 @@
               </li>
 
               <li>
-                <img src="./images/smartphone.jpg" alt="Смартфон" width="370" class="image" />
-                <div class="work-description">
-                  <a href="" class="work-ref">Мобильные приложения</a>
+                <div class="work__card__image">
+                  <img src="./images/smartphone.jpg" alt="Смартфон" width="370" class="image" />
+                  <div class="work-description">
+                    <a href="" class="work-ref">Мобильные приложения</a>
+                  </div>
                 </div>
               </li>
 
               <li>
-                <img src="./images/inspiration.jpg" alt="Монитор" width="370" class="image" />
-                <div class="work-description">
-                 <a href="" class="work-ref">Дизайнерские решения</a>
+                <div class="work__card__image">
+                  <img src="./images/inspiration.jpg" alt="Монитор" width="370" class="image" />
+                  <div class="work-description">
+                  <a href="" class="work-ref">Дизайнерские решения</a>
+                  </div>
                 </div>
               </li>
             </ul>
